--- a/week_4/index.html
+++ b/week_4/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script type="module" src="app.js" defer></script>
+    <script type="module" src="../week_5/app.js" defer></script>
     <title>Document</title>
 </head>
 
@@ -19,9 +19,28 @@
 
     <main>
         <h2>My Favourite Recipes</h2>
-        <ul>
-            <li></li>
-        </ul>
+
+        <!-- week 5 -->
+        <h3>Add a new recipe:</h3>
+        <form action="">
+            <label for="name">Name: </label>
+            <input type="text" name="name" id="name">
+            <br>
+            <label for="cuisine">Cuisine: </label>
+            <input type="text" name="cuisine" id="cuisine">
+            <br>
+            <label for="time">Time: </label>
+            <input type="text" name="time" id="time">
+            <br>
+            <label for="ingredients">Ingredients (each on a new line): </label>
+            <textarea name="ingredients" id="ingredients"></textarea>
+            <br>
+            <label for="steps">Steps (each on a new line): </label>
+            <textarea name="steps" id="steps"></textarea>
+            <br>
+            <input type="submit" value="Save Recipe">
+        </form>
+        <ul id="recipe-list"></ul>
     </main>
 
     <footer>
