--- a/week_4/index.html
+++ b/week_4/index.html
@@ -4,42 +4,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+
+    <!--week 6-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">">
+
+    <link rel="stylesheet" href="../week_6/styles.css">
     <script type="module" src="../week_5/app.js" defer></script>
-    <title>Document</title>
+    <title>InstantGramen</title>
 </head>
 
 <body>
     <header>
         <h1>InstantGramEn</h1>
-        <a>Recipes</a>
-        <a>About us</a>
-        <a>Contact</a>
+        <div>
+            <a href="">Recipes</a>
+            <a href="">About us</a>
+            <a href="">Contact</a>
+        </div>
     </header>
 
     <main>
         <h2>My Favourite Recipes</h2>
 
         <!-- week 5 -->
-        <h3>Add a new recipe:</h3>
         <form action="">
-            <label for="name">Name: </label>
-            <input type="text" name="name" id="name">
+            <!-- week 6-->
+            <p>Add a new recipe:</p>
+            <div class="form-row">
+                <label for="name">Name: </label>
+                <input type="text" name="name" id="name">
+            </div>
             <br>
-            <label for="cuisine">Cuisine: </label>
-            <input type="text" name="cuisine" id="cuisine">
+
+            <div class="form-row">
+                <label for="cuisine">Cuisine: </label>
+                <input type="text" name="cuisine" id="cuisine">
+            </div>
             <br>
-            <label for="time">Time: </label>
-            <input type="text" name="time" id="time">
+
+            <div class="form-row">
+                <label for="time">Time: </label>
+                <input type="text" name="time" id="time">
+            </div>
             <br>
-            <label for="ingredients">Ingredients (each on a new line): </label>
-            <textarea name="ingredients" id="ingredients"></textarea>
+
+            <div class="form-row">
+                <label for="ingredients">Ingredients (each on a new line): </label>
+                <textarea name="ingredients" id="ingredients"></textarea>
+            </div>
             <br>
-            <label for="steps">Steps (each on a new line): </label>
-            <textarea name="steps" id="steps"></textarea>
+
+            <div class="form-row">
+                <label for="steps">Steps (each on a new line): </label>
+                <textarea name="steps" id="steps"></textarea>
+            </div>
             <br>
             <input type="submit" value="Save Recipe">
         </form>
+
         <ul id="recipe-list"></ul>
     </main>
 
