--- a/week_4/index.html
+++ b/week_4/index.html
@@ -8,7 +8,7 @@
     <!--week 6-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="../week_6/styles.css">
     <script type="module" src="../week_5/app.js" defer></script>
@@ -26,8 +26,6 @@
     </header>
 
     <main>
-        <h2>My Favourite Recipes</h2>
-
         <!-- week 5 -->
         <form action="">
             <!-- week 6-->
@@ -64,6 +62,7 @@
             <input type="submit" value="Save Recipe">
         </form>
 
+        <h2>💌 My Favourite Recipes</h2>
         <ul id="recipe-list"></ul>
     </main>
 
